--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "build": "rollup -c",
-    "dev": "rollup -c -w",
-    "start": "sirv public --no-clear",
+    "dev": "HOST=0.0.0.0 rollup -c -w -s",
+    "start": "sirv public --no-clear -s",
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
@@ -47,6 +47,8 @@
     "netlify-lambda": "^2.0.6",
     "sirv": "^1.0.0",
     "sirv-cli": "^1.0.0",
+    "svelte-navigator": "^3.1.5",
+    "svelte-routing": "^1.6.0",
     "svelte-web3": "^2.0.1",
     "web3": "^1.3.6",
     "web3-eth": "^1.3.5",
